[gd_scene load_steps=2 format=3 uid="uid://btd5s4g7b8xf2"]

[ext_resource type="Script" path="res://scripts/ui/DialogueUI.gd" id="1_0k4xq"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0k4xq")

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 10.0
offset_top = 400.0
offset_right = 350.0
offset_bottom = 630.0
grow_horizontal = 0
grow_vertical = 0

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
bbcode_enabled = true
text = "NPC dialogue appears here..."

[node name="OptionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 10.0
offset_top = 10.0
offset_right = 350.0
offset_bottom = 390.0
grow_horizontal = 0
grow_vertical = 0

[node name="OptionContainer" type="VBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0